Dynamically update the swagger JSON with service info.
